# tr_torrent-list_export

./: .dockerignore  .env.example  .gitignore  Dockerfile  Python ts-rpc使用文档.md  README.docker.md  README.md  build_20260407-1_amd64.deb  connection.py  docker-compose.yml  docker容器规划.md  export_nsfw_name_comment.py  gpt tr-rpc.md  gui_app.py  kimi tr-rpc.md  main.py  pyside_app.py  test.py  torrent_processor.py  url.txt
backend/: app.py  config.py  requirements.txt
config/: config.json
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  desktop.js  styles.css
scripts/: entrypoint.sh
