[package]
name = "tr-torrent-ui"
version = "0.1.0"
description = "Transmission Torrent UI"
authors = ["you"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
portpicker = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
